--- a/src/Web/Backoffice/Pages/Products/Attributes/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Attributes/Delete.cshtml
@@ -9,7 +9,7 @@
 
 <h3>Tem a certeza que quer apagar?</h3>
 <div>
-    <h4>Atributo do Produto @Model.CatalogAttributeModel.CatalogItem.Name</h4>
+    <h4>Atributo do Produto @Model.ProductName</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
