--- a/src/Web/Backoffice/Pages/Products/Attributes/Create.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Attributes/Create.cshtml
@@ -7,13 +7,12 @@
 
 <h2>Novo</h2>
 
-<h4>Atributo do Produto @Model.CatalogAttributeModel.CatalogItem.Name</h4>
+<h4>Atributo do Produto @Model.ProductName</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CatalogAttributeModel.CatalogItem.Name" />
             <div class="form-group">
                 <label asp-for="CatalogAttributeModel.Type" class="control-label"></label>
                 <select asp-for="CatalogAttributeModel.Type" asp-items="Html.GetEnumSelectList<ApplicationCore.Entities.AttributeType>()" class="form-control"></select>
@@ -33,7 +32,7 @@
 </div>
 
 <div>
-    <a asp-page="/Product/Edit" asp-route-id="@Model.CatalogAttributeModel.CatalogItemId">Voltar</a>
+    <a asp-page="/Products/Edit" asp-route-id="@Model.CatalogAttributeModel.CatalogItemId">Voltar</a>
 </div>
 
 @section Scripts {
