--- a/src/Web/Backoffice/Pages/Products/Create.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Create.cshtml
@@ -38,6 +38,11 @@
                 <input asp-for="ProductModel.Price" class="form-control decimal" /> <span id="ProductTypePrice"></span>
                 <span asp-validation-for="ProductModel.Price" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="ProductModel.Stock" class="control-label"></label>
+                <input asp-for="ProductModel.Stock" class="form-control" />
+                <span asp-validation-for="ProductModel.Stock" class="text-danger"></span>
+            </div>
             <div class="form-check">
                 <input asp-for="ProductModel.ShowOnShop" class="form-check-input" checked />
                 <label asp-for="ProductModel.ShowOnShop" class="form-check-label"></label>
