add stock to backoffice

--- a/src/Web/Backoffice/Pages/Products/Attributes/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Attributes/Delete.cshtml
@@ -24,6 +24,12 @@
         <dd>
             @Html.DisplayFor(model => model.CatalogAttributeModel.Name)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.CatalogAttributeModel.Stock)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CatalogAttributeModel.Stock)
+        </dd>
     </dl>
     
     <form method="post">
