--- a/src/Web/Backoffice/Pages/Products/Attributes/Create.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Attributes/Create.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="CatalogAttributeModel.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CatalogAttributeModel.Stock" class="control-label"></label>
+                <input asp-for="CatalogAttributeModel.Stock" class="form-control" />
+                <span asp-validation-for="CatalogAttributeModel.Stock" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="hidden" asp-for="CatalogAttributeModel.CatalogItemId" />
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
