--- a/src/Web/Backoffice/Pages/Products/Attributes/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Attributes/Edit.cshtml
@@ -23,6 +23,11 @@
                 <input asp-for="CatalogAttributeModel.Name" class="form-control" />
                 <span asp-validation-for="CatalogAttributeModel.Name" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="CatalogAttributeModel.Stock" class="control-label"></label>
+                <input asp-for="CatalogAttributeModel.Stock" class="form-control" />
+                <span asp-validation-for="CatalogAttributeModel.Stock" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="CatalogAttributeModel.Id" />
             <input type="hidden" asp-for="CatalogAttributeModel.CatalogItemId" />
             <div class="form-group">
