Add Stock to Grocery

--- a/src/Web/Backoffice/Areas/Grocery/Pages/Products/Delete.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/Products/Delete.cshtml
@@ -23,12 +23,18 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CatalogItem.Name)
-        </dd>        
+        </dd>
         <dt>
             Preço
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CatalogItem.Price)
+        </dd>
+        <dt>
+            Stock
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CatalogItem.Stock)
         </dd>
         <dt>
             Imagem
