--- a/src/Web/Backoffice/Areas/Grocery/Pages/Products/Create.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/Products/Create.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="CatalogItem.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CatalogItem.Stock" class="control-label"></label>
+                <input asp-for="CatalogItem.Stock" class="form-control decimal" />
+                <span asp-validation-for="CatalogItem.Stock" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Picture" class="control-label"></label>
                 <input type="file" asp-for="Picture" class="form-control" />
                 <small>(quadrado)</small>
