--- a/src/Web/Backoffice/Areas/Grocery/Pages/Products/Edit.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/Products/Edit.cshtml
@@ -25,6 +25,11 @@
                 <span asp-validation-for="CatalogItem.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CatalogItem.Stock" class="control-label"></label>
+                <input asp-for="CatalogItem.Stock" class="form-control decimal" />
+                <span asp-validation-for="CatalogItem.Stock" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="CatalogItem.PictureUri" class="control-label">Imagem</label>
                 <img src="@Model.CatalogItem.PictureUri" class="img-thumbnail" />
                 <span asp-validation-for="CatalogItem.PictureUri" class="text-danger"></span>
