--- a/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
@@ -49,6 +49,8 @@
                             <li><a asp-page="/ShopConfig/Index">Loja</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a asp-page="/Orders/Index">Encomendas</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a asp-page="/Stock/Index">Stocks</a></li>
                         </ul>
                     </li>                    
                     <li class="dropdown">
