--- a/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
@@ -63,6 +63,8 @@
                             <li><a asp-area="Grocery" asp-page="/Products/Index">Produtos</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a asp-area="Grocery" asp-page="/Sales/Index">Vendas</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a asp-area="Grocery" asp-page="/Stock/Index">Stock</a></li>
                         </ul>
                     </li>
                 </ul>
