--- a/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                             <li role="separator" class="divider"></li>
                             <li><a asp-page="/Stock/Index">Stocks</a></li>
                         </ul>
-                    </li>                    
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             Sabor com Tradição <span class="caret"></span>
@@ -108,7 +108,7 @@
         <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
     </environment>
-
+    <script src="//code.tidio.co/y1kvzq6n5sjqdfahwngkxamrbr75nqyc.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
