--- a/src/Web/Backoffice/Pages/ShopConfig/Index.cshtml
+++ b/src/Web/Backoffice/Pages/ShopConfig/Index.cshtml
@@ -6,6 +6,27 @@
 <h2>Configuração da loja</h2>
 @for (var i = 0; i < Model.ShopConfigModel.Count; i++)
 {
+    @if (Model.ShopConfigModel[i].Type == ApplicationCore.Entities.ShopConfigType.SEO)
+    {
+        <h4>SEO</h4>
+        <div class="row">
+            <div class="col-md-4">
+                <form method="post" asp-page-handler="UpdateSEO">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="ShopConfigModel[i].Id" />
+                    <input type="hidden" asp-for="ShopConfigModel[i].IsActive" />
+                    <div class="form-group">
+                        <label asp-for="ShopConfigModel[i].Value">Meta Description</label>
+                        <input asp-for="ShopConfigModel[i].Value" class="form-control" />
+                        <span asp-validation-for="ShopConfigModel[i].Value" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-default">Gravar</button>
+                </form>
+            </div>
+        </div>
+
+    }
+    <hr />
     @if (Model.ShopConfigModel[i].Type == ApplicationCore.Entities.ShopConfigType.NEWS_BANNER)
     {
         <h4>Novidades - Loja</h4>
