--- a/src/Web/Backoffice/Pages/ShopConfig/Index.cshtml
+++ b/src/Web/Backoffice/Pages/ShopConfig/Index.cshtml
@@ -10,23 +10,24 @@
     {
         <h4>SEO</h4>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <form method="post" asp-page-handler="UpdateSEO">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="ShopConfigModel[i].Id" />
                     <input type="hidden" asp-for="ShopConfigModel[i].IsActive" />
+                    <input type="hidden" asp-for="ShopConfigModel[i].Type" />
                     <div class="form-group">
                         <label asp-for="ShopConfigModel[i].Value">Meta Description</label>
-                        <input asp-for="ShopConfigModel[i].Value" class="form-control" />
+                        <textarea asp-for="ShopConfigModel[i].Value" class="form-control"></textarea>
                         <span asp-validation-for="ShopConfigModel[i].Value" class="text-danger"></span>
                     </div>
                     <button type="submit" class="btn btn-default">Gravar</button>
                 </form>
             </div>
         </div>
-
+        <hr />
     }
-    <hr />
+
     @if (Model.ShopConfigModel[i].Type == ApplicationCore.Entities.ShopConfigType.NEWS_BANNER)
     {
         <h4>Novidades - Loja</h4>
@@ -47,6 +48,7 @@
                 </form>
             </div>
         </div>
+        <hr />
         <h4>Banners</h4>
         <p>
             <a asp-page="./Create" asp-route-id="@Model.ShopConfigModel[i].Id">Novo Detalhe</a>
