--- a/src/Web/DamaWeb/Pages/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page 
 @{
     ViewData["Title"] = "Online";
-    ViewData["MetaDescription"] = "Bem-vindo à Dama no Jornal®. A Loja Online que oferece os Presentes Personalizados mais Criativos. Vem conhecer os nossos Produtos e Personaliza!";
+    //ViewData["MetaDescription"] = "Bem-vindo à Dama no Jornal®. A Loja Online que oferece os Presentes Personalizados mais Criativos. Vem conhecer os nossos Produtos e Personaliza!";
     @model IndexModel
 }
 
