adding metadescription in Category, CatalogType and Catalog (WIP)

--- a/src/Web/Backoffice/Pages/Category/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Category/Details.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.Category.Order)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Category.Position)
+            @Html.DisplayNameFor(model => model.Category.MetaDescription)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Category.Position)
+            @Html.DisplayFor(model => model.Category.MetaDescription)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Category.ParentId)
