--- a/src/Web/Backoffice/Pages/Category/Create.cshtml
+++ b/src/Web/Backoffice/Pages/Category/Create.cshtml
@@ -24,11 +24,9 @@
                 <span asp-validation-for="Category.Order" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Category.Position" class="control-label"></label>
-                <select asp-for="Category.Position" class="form-control" asp-items="ViewBag.PositionList">
-                    <option></option>
-                </select>
-                <span asp-validation-for="Category.Position" class="text-danger"></span>
+                <label asp-for="Category.MetaDescription" class="control-label"></label>
+                <input asp-for="Category.MetaDescription" class="form-control" />
+                <span asp-validation-for="Category.MetaDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Category.ParentId" class="control-label"></label>
