--- a/src/Web/Backoffice/Pages/ProductType/Details.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Details.cshtml
@@ -77,6 +77,18 @@
             @Html.DisplayFor(model => model.ProductTypeModel.ShippingCost)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.MetaDescription)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.MetaDescription)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.Title)
+        </dt>
+        <dd>
+            @(!string.IsNullOrEmpty(Model.ProductTypeModel.Title) ? Model.ProductTypeModel.Title : Model.ProductTypeModel.Description)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductTypeModel.PictureUri)
         </dt>
         <dd>
