--- a/src/Web/Backoffice/Pages/ProductType/Index.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Index.cshtml
@@ -40,6 +40,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.ProductTypesModel[0].ShippingCost)
             </th>
+            <th>
+                Meta & Title?
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -73,6 +76,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ShippingCost)
             </td>
+            <td>@(!string.IsNullOrEmpty(item.MetaDescription) ? "Sim/": "Não/")@(!string.IsNullOrEmpty(item.Title) ? "Sim" : "Não")</td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Editar</a> |
                 <a asp-page="./Details" asp-route-id="@item.Id">Detalhe</a> |
