--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     {
         <meta name="robots" content="noindex" />
     }
-    <title>Loja - @ViewData["Title"]</title>
+    <title>@ViewData["Title"] - Dama no Jornal</title>
 
     <environment names="Production">
         <!-- Global site tag (gtag.js) - Google Analytics -->
