--- a/src/Web/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Details.cshtml
@@ -28,15 +28,15 @@
         </dt>
         <dd>
             @foreach (var cat in Model.ProductModel.CatalogCategories)
-        {
-            @cat.Label
-            <br />
-            @foreach (var child in cat.Childs)
-        {
-            @child.Label
-            <br />
-    }
-    }
+            {
+                @cat.Label
+                <br />
+                @foreach (var child in cat.Childs)
+                {
+                    @child.Label
+                    <br />
+                }
+            }
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProductModel.CatalogTypeId)
@@ -87,6 +87,18 @@
             @Html.DisplayFor(model => model.ProductModel.CanCustomize)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.MetaDescription)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.MetaDescription)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.Title)
+        </dt>
+        <dd>
+            @(!string.IsNullOrEmpty(Model.ProductModel.Title) ? Model.ProductModel.Title : Model.ProductModel.Name)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductModel.PictureUri)
         </dt>
         <dd>
@@ -103,19 +115,19 @@
         </dt>
         <dd>
             @foreach (var item in Model.ProductModel.CatalogPictures)
-        {
-            <div class="col-md-3">
-                <img src="@item.PictureUri" class="img-responsive" />
-                <div>
-                    @Html.DisplayNameFor(model => item.IsActive)
-                    @Html.DisplayFor(model => item.IsActive)
+            {
+                <div class="col-md-3">
+                    <img src="@item.PictureUri" class="img-responsive" />
+                    <div>
+                        @Html.DisplayNameFor(model => item.IsActive)
+                        @Html.DisplayFor(model => item.IsActive)
+                    </div>
+                    <div>
+                        @Html.DisplayNameFor(model => item.Order)
+                        @Html.DisplayFor(model => item.Order)
+                    </div>
                 </div>
-                <div>
-                    @Html.DisplayNameFor(model => item.Order)
-                    @Html.DisplayFor(model => item.Order)
-                </div>
-            </div>
-    }
+            }
         </dd>
     </dl>
     <hr />
